<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditStudentActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/student_information"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/fullNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="151dp" />

        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="text"
            android:text="Name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bdField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameField">

        <TextView
            android:id="@+id/tv_bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="151dp" />

        <EditText
            android:id="@+id/et_bd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="dd/mm/yyyy"
            android:inputType="date" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/classField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"

        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/bdField"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/tv_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classText"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="151dp" />

<!--        <EditText-->
<!--            android:id="@+id/classButton2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/grey"-->
<!--            android:clickable="true"-->
<!--            android:drawableEnd="@drawable/baseline_arrow_drop_down_24"-->
<!--            android:focusable="false"-->
<!--            android:minHeight="48dp"-->

<!--            android:text="@string/class_holder" />-->

        <Spinner
            android:id="@+id/classButton"
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/genderField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"

        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/classField">

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="@drawable/custom_radio_button"
                android:drawablePadding="6dp"
                android:text="Male" />

            <RadioButton
                android:id="@+id/radio_female"

                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:button="@null"
                android:drawableStart="@drawable/custom_radio_button"
                android:drawablePadding="6dp"
                />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_marginStart="30dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="@drawable/custom_radio_button"
                android:drawablePadding="6dp"

                android:text="Other" />
        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/deleteBtnColor"
        android:text="@string/delete"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/saveBtnColor"
        android:text="@string/save"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
            android:text="(html link)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/gotoWebview"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderField" app:layout_constraintBottom_toTopOf="@+id/btn_delete" android:textSize="16sp"
            android:textColor="#2c54ff"/>

</androidx.constraintlayout.widget.ConstraintLayout>